--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,3 +1,9 @@
+* {
+margin: 0;
+padding: 0;
+box-sizing: border-box;
+}
+
 body {
   background-image: url("https://lh3.googleusercontent.com/81KtPLO97ghFCgOLWtsrdF8hUndCcWavJOQ-s5wvmuV3XuL0N0v4c_jL5nMb1TZFNtc6EaVCMFnALtlxNRVnPsV9yC0VsgFm0czsz7geDbT9W2blhAvNX6FPckjJLc3xZwviiVXEnc8zK5crP7m11NgM100s2q8b0mMT1l7axZzcmLhZ6rJM3K2UzMkdvAEnnB0IJvmiBm7cBb8YuMVhZ9r-nxv9Ev2G9RQGQKStaS6KVWJHSvzIYP1YQEPGImrFyHX7sfvb7CdahP8FOxPSSg1Gvk6h--V_XymrDN9CBGZJZCurv9t_EODccZ4TVf7VUyOrpTWoXLcq1QL6G2hFSzYwstzi1nENhNnisxs1y70mN-UOY0L4mPgwH6n0Yr492zx38ZC9TT439dSuqWNpGNPGaMX9qtZKksyRnHKqCe6VjiRDv6J1q6izY5sTJ3jcGjEj0TsvSChahq8UtuwCeRjAWnlVBhoFwCxCGFhKXkKMbPxc2nFvz-VIxr-d9sug-EJk8KTCcmHvKQr5hFwTCKJaAcCHMqXciPZXKbJ8vjxcFL35rxp_9s6LFaKpusnw4RpEHto_5QSJlVmVWu-LzHr9GmxCcQduaPM1Bv4EFxUISS9tyAsjvRi8IIxteuZf7M1RwygTxN3RMIX7u_PErQ9ujSnllurLXC6EZyNGtL10bhfeO9Y0ZcAgojnH=w300-h168-no?authuser=0");
   font-family: Arial;
@@ -37,4 +43,9 @@ a:hover {
 .site-subtitle {
  font-style: italic;
  font-size: 30px;
+}
+
+.img-portfolio {
+  height: 180px;
+  width: 180px;
 }
